--- a/views/employees/showemp.ejs
+++ b/views/employees/showemp.ejs
@@ -4,6 +4,12 @@
     <div class="header">
       <form action="/employees/search" method="GET">
         <input type="text" name="Search" placeholder="Search"/>
+        <select name="filter">
+          <option value="" disabled selected>Select Department</option>
+          <% departments.forEach(department => { %>
+            <option name="filter" value="<%= department.name %>"><%= department.name %></option>
+          <% }) %>
+        </select>
         <button type="submit">Search</button>
       </form>
       <a href="/employees/new" class="add-employee-btn">Add New Employee</a>
