--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -5,6 +5,7 @@
     <title>Office Management System</title>
     <link rel="stylesheet" href="/css/emplyee.css">
     <link rel="stylesheet" href="/css/empadd.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
 <nav>
